--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">MoviesByGA</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title">TITLE</string>
+    <string name="release_date">Release Date</string>
+    <string name="sample_date">12-12-2012</string>
+    <string name="rating">Rating</string>
+    <string name="sample_rating">6.7</string>
+    <string name="overview">Overview</string>
+
 
     <string name="settings_order_by_popularity_label" translatable="true">Popularity</string>
     <string name="settings_order_by_vote_label" translatable="true">Vote</string>
